add endpoint for latest brew
